syntax = "proto3";

package ethereum.eth.dbval;

option go_package = "github.com/prysmaticlabs/prysm/v4/proto/dbval;dbval";

message BackfillStatus {
    uint64 low_slot = 1;
    bytes low_root = 2;
    bytes low_parent_root = 3;
    uint64 origin_slot = 4;
    bytes origin_root = 6;
}
